test/must_fail/all_user_code_with_one_throw_exception.ngjs
#!/usr/bin/env ngspicejs
// Exception test
// linter: ngspicejs-lint
"use strict";

function aaa() {
    echo('aaa()');
    throw new Exception("Some error");
}

function bbb() {
    echo('bbb()');
    return aaa();
}

bbb();
